manifests/flask_deploy.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: flask-api-deployment
#   namespace: flask-api
#   labels:
#     app: flask-api
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-api-flask
  namespace: flask-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
        - name: flask-api
          image: mercadinho-flask-api:3.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause: {}
        - setWeight: 75
        - pause: {}
        - setWeight: 100
